[package]
name = "esp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
byteorder = "1.5.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
socket2 = "0.5.6"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "signal", "fs"] }
