[package]
name = "esp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
byteorder = "1.5.0"
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["serde_derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "signal",
    "fs",
    "io-util",
] }
