[package]
name = "esp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
byteorder = "1.5.0"
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "signal",
    "fs",
    "io-util",
] }
